<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/representative_photo_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/representative_office_name"
            android:layout_width="0dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{representative.office.name}"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Prime Minister of Canada" />

        <TextView
            android:id="@+id/representative_official_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@{representative.official.name}"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/representative_office_name"
            tools:text="Justin Trudeau" />

        <TextView
            android:id="@+id/representative_official_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginBottom="8dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintTop_toBottomOf="@id/representative_official_name"
            tools:text="Liberal Party of Canada" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/website_icon_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/facebook_icon"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/facebook_icon_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/twitter_icon_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>